# candle-cormel-test

./: Cargo.toml  README.md  cargo  tokenizer.json
scripts/: download_and_compile.py
src/: coreml_test.rs  main.rs
